--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,21 @@
 	<string>Aurynn Shaw</string>
 	<key>description</key>
 	<string>Terraform syntax highlighting and snippets and such</string>
+	<key>mainMenu</key>
+	<dict>
+		<key>items</key>
+		<array>
+			<string>FDE4F18B-4F28-43D1-9C22-40B6EB199699</string>
+			<string>08E09A67-9AB5-4238-8A17-EB8018913B77</string>
+			<string>3900C7BE-A1BA-4DDB-B724-E0F13497A38D</string>
+			<string>14985944-DBB1-48B8-BBC7-62A30AB45C95</string>
+			<string>F00AB1DC-486B-4D26-BBCE-702E98E20DA1</string>
+			<string>A842A40F-82A7-4C8C-B0B5-FBF3E39A2BDE</string>
+			<string>B82D43E1-8188-4A0D-B3DB-F82B90762D96</string>
+			<string>19D2E662-9E7F-4803-A999-4A41B3BD8B36</string>
+			<string>B2256EB1-F8FF-4419-94A0-8813CFB3ADCE</string>
+		</array>
+	</dict>
 	<key>name</key>
 	<string>Terraform</string>
 	<key>uuid</key>
