Insert new snippets into menu structure

--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,7 @@
 		<array>
 			<string>FDE4F18B-4F28-43D1-9C22-40B6EB199699</string>
 			<string>08E09A67-9AB5-4238-8A17-EB8018913B77</string>
+			<string>C6782691-FD04-4B84-A475-50B1413C8A19</string>
 			<string>3900C7BE-A1BA-4DDB-B724-E0F13497A38D</string>
 			<string>14985944-DBB1-48B8-BBC7-62A30AB45C95</string>
 			<string>F00AB1DC-486B-4D26-BBCE-702E98E20DA1</string>
@@ -21,6 +22,7 @@
 			<string>B82D43E1-8188-4A0D-B3DB-F82B90762D96</string>
 			<string>19D2E662-9E7F-4803-A999-4A41B3BD8B36</string>
 			<string>B2256EB1-F8FF-4419-94A0-8813CFB3ADCE</string>
+			<string>F3E9CAB4-55F5-4E4E-B60E-4BCFBF8F2084</string>
 		</array>
 	</dict>
 	<key>name</key>
